@@ -25,8 +25,8 @@ module Monban
     end
 
     def authenticate_session session_params, field_map = nil
-      password = session_params.delete(Monban.config.user_token_field)
-      user = Monban.lookup(session_params, field_map)
+      password = session_params.fetch(Monban.config.user_token_field)
+      user = Monban.lookup(session_params.except(Monban.config.user_token_field), field_map)
       authenticate(user, password)
     end
 
